Implement and test multiplayer connection using STOMP

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -38,7 +38,7 @@
 
 
 
-    <!-- Zahnrad-Symbol (größer) -->
+    <!-- Zahnrad-Symbol  -->
     <ImageButton
         android:id="@+id/settingsBtn"
         android:layout_width="64dp"
