--- a/app/src/main/res/layout/activity_action_card.xml
+++ b/app/src/main/res/layout/activity_action_card.xml
@@ -12,7 +12,6 @@
         android:layout_marginTop="80dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +22,7 @@
         android:layout_width="293dp"
         android:layout_height="36dp"
         android:layout_marginTop="80dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +33,7 @@
         android:layout_width="182dp"
         android:layout_height="49dp"
         android:layout_marginBottom="80dp"
-        android:text="Okay!"
+        android:text="@string/action_card_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -45,9 +44,11 @@
         android:layout_width="251dp"
         android:layout_height="160dp"
         android:layout_marginTop="50dp"
+        android:contentDescription="@string/action_card_image_descr_nothing_loaded"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headline" />
+        app:layout_constraintTop_toBottomOf="@+id/headline"
+        tools:ignore="ImageContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
