--- a/app/src/main/res/layout/activity_action_card.xml
+++ b/app/src/main/res/layout/activity_action_card.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_action_card">
 
     <TextView
         android:id="@+id/description"
@@ -32,7 +33,8 @@
         android:id="@+id/button"
         android:layout_width="182dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="84dp"
+        android:backgroundTint="#FF5722"
         android:text="@string/action_card_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
