--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -11,23 +11,26 @@
     tools:context=".MainActivity">
 
     <!-- Verbinden -->
+
+    <!-- Spielzug senden -->
+
     <Button
         android:id="@+id/connectbtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="🔌 Verbinden"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/rounded_blue_button"
-        android:textColor="#FFFFFF" />
+        android:gravity="center"
+        android:text="🔌 Verbinden"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Spielzug senden -->
     <Button
         android:id="@+id/hellobtn"
         android:layout_width="0dp"
