minor changes to prepare for push to main

--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -9,15 +9,15 @@
             android:padding="16dp"
             tools:context="at.aau.serg.websocketbrokerdemo.MainActivity">
 
-            <Button
-                android:id="@+id/connectbtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="🔌 Verbinden"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="40dp"/>
+    <Button
+        android:id="@+id/connectbtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="🔌 Verbinden"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/hellobtn"
