--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:zoom="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/holo_blue_bright">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:zoom="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_bright">
 
+    <!-- Zoombares Spielfeld -->
     <com.otaliastudios.zoom.ZoomLayout
         android:id="@+id/zoomLayout"
         android:layout_width="match_parent"
@@ -12,22 +13,30 @@
         android:padding="0dp"
         zoom:alignment="center"
         zoom:transformationGravity="center"
-        zoom:transformation="centerCrop"  
-    zoom:zoomEnabled="true"
-    zoom:minZoom="1.0"
-    zoom:maxZoom="4.0"
-    zoom:overScrollHorizontal="false"
-    zoom:overScrollVertical="false"
-    zoom:horizontalPanEnabled="true"
-    zoom:verticalPanEnabled="true">
+        zoom:transformation="centerCrop"
+        zoom:zoomEnabled="true"
+        zoom:minZoom="1.0"
+        zoom:maxZoom="4.0"
+        zoom:overScrollHorizontal="false"
+        zoom:overScrollVertical="false"
+        zoom:horizontalPanEnabled="true"
+        zoom:verticalPanEnabled="true">
 
+        <ImageView
+            android:id="@+id/boardImag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/board5" />
+    </com.otaliastudios.zoom.ZoomLayout>
+
+    <!-- Spielfigur außerhalb vom ZoomLayout -->
     <ImageView
-        android:id="@+id/boardImag"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/board6" />
-
-</com.otaliastudios.zoom.ZoomLayout>
-
-    </FrameLayout>
+        android:id="@+id/playerImageView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="top|start"
+        android:src="@drawable/blackcar"
+        android:translationZ="10dp"
+        android:alpha="0" />
+</FrameLayout>
