--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:zoom="http://schemas.android.com/apk/res-auto"
+    xmlns:androidx="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+    android:layout_height="match_parent">
 
     <!-- Zoombares Spielfeld -->
     <com.otaliastudios.zoom.ZoomLayout
         android:id="@+id/zoomLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="0dp"
-        zoom:alignment="center"
-        zoom:transformationGravity="center"
-        zoom:transformation="centerCrop"
         zoom:zoomEnabled="true"
-        zoom:minZoom="1.0"
-        zoom:maxZoom="4.0"
-        zoom:overScrollHorizontal="false"
-        zoom:overScrollVertical="false"
-        zoom:horizontalPanEnabled="true"
-        zoom:verticalPanEnabled="true">
+        zoom:minZoom="0.9"
+        zoom:maxZoom="5.0">
 
-        <ImageView
-            android:id="@+id/boardImag"
+        <!-- Brett + Figur im gemeinsamen Container -->
+        <FrameLayout
+            android:id="@+id/boardContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/board5" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/boardImag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/board5" />
+
+            <ImageView
+                android:id="@+id/playerImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/blackcar"
+                android:translationZ="10dp"
+                android:alpha="1" />
+        </FrameLayout>
     </com.otaliastudios.zoom.ZoomLayout>
 
-    <!-- Spielfigur außerhalb vom ZoomLayout -->
-    <ImageView
-        android:id="@+id/playerImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="top|start"
-        android:src="@drawable/blackcar"
-        android:translationZ="10dp"
-        android:alpha="1" />
+    <!-- 🎲 Würfel-Button oben rechts -->
+    <ImageButton
+        android:id="@+id/diceButton"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_white_button"
+        android:src="@drawable/dice"
+        android:contentDescription="Würfeln"
+        android:scaleType="centerInside"
+        />
 </FrameLayout>
