minor changes and cleanup code

--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/main_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            tools:context="at.aau.serg.websocketbrokerdemo.MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    tools:context="at.aau.serg.sdlapp.MainActivity">
 
     <Button
         android:id="@+id/connectbtn"
@@ -26,46 +25,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/hellobtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="🎲 Spielzug senden"
-                app:layout_constraintTop_toBottomOf="@+id/connectbtn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="12dp" />
+    <Button
+        android:id="@+id/hellobtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="🎲 Spielzug senden"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connectbtn" />
 
-            <Button
-                android:id="@+id/jsonbtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="💬 Chat senden"
-                app:layout_constraintTop_toBottomOf="@+id/hellobtn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="12dp" />
+    <Button
+        android:id="@+id/jsonbtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="💬 Chat senden"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hellobtn" />
 
-            <TextView
-                android:id="@+id/statusText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status: Getrennt"
-                android:textStyle="bold"
-                android:textColor="#444"
-                app:layout_constraintTop_toBottomOf="@+id/jsonbtn"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="12dp" />
+    <TextView
+        android:id="@+id/statusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Status: Getrennt"
+        android:textColor="#444"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jsonbtn" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/messageList"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="Liste der Nachrichten"
-                app:layout_constraintTop_toBottomOf="@+id/statusText"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:listitem="@android:layout/simple_list_item_1" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messageList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="Liste der Nachrichten"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statusText"
+        tools:listitem="@android:layout/simple_list_item_1" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
