--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="status_disconnected">#F44336</color>
     <color name="status_error">#FF9800</color>
     <color name="action_card_blue">#4249BD</color>
+    <color name="baby_blue">#FFFFFF</color>
 </resources>
