themes für Dark & Light Mode geändert

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="status_disconnected">#F44336</color>
     <color name="status_error">#FF9800</color>
     <color name="action_card_blue">#4249BD</color>
+    <color name="blue_200">#90CAF9</color>
+    <color name="blue_500">#2196F3</color>
+    <color name="blue_700">#1976D2</color>
 </resources>
