--- a/app/src/main/res/layout/fragment_fullscreen.xml
+++ b/app/src/main/res/layout/fragment_fullscreen.xml
@@ -6,9 +6,9 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_mainactivity"
+    android:background="@drawable/background_mainscreen"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".ui.StartActivity">
 
     <!-- Verbinden -->
 
