--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <!-- Board game related dimensions -->
     <dimen name="marker_size">30dp</dimen>
+    <dimen name="player_figure_size">48dp</dimen>
 </resources>
